[gd_scene load_steps=6 format=3 uid="uid://cc1ivq2r0i52h"]

[ext_resource type="Script" path="res://Scripts/Interface/HUD.gd" id="1_5x3fk"]
[ext_resource type="Texture2D" uid="uid://d2e034pdyr8yj" path="res://Graphics/Interface/Ring.png" id="2_qkp26"]
[ext_resource type="AudioStream" uid="uid://ckemlm8gcppms" path="res://SFX/Menu Back.WAV" id="3_53q0m"]
[ext_resource type="AudioStream" uid="uid://ba43d7q27yyp8" path="res://SFX/Menu Select.WAV" id="4_xoioy"]

[sub_resource type="LabelSettings" id="LabelSettings_ydy4g"]
line_spacing = 2.0
font_size = 20

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5x3fk")

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 48.0
color = Color(0.0823529, 0.223529, 0.580392, 0.501961)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 56.0
offset_right = 120.0
offset_bottom = 72.0
color = Color(0.0823529, 0.223529, 0.580392, 0.501961)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 504.0
offset_top = 32.0
offset_right = 624.0
offset_bottom = 48.0
color = Color(0.0823529, 0.223529, 0.580392, 0.501961)

[node name="LabelRings" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = 48.0
offset_top = 51.0
offset_right = -215.0
offset_bottom = -110.0
size_flags_horizontal = 0
text = "999
"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = 80.0
offset_top = 21.0
offset_right = -162.0
offset_bottom = -140.0
size_flags_horizontal = 0
text = "000000"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelTime" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = 520.0
offset_top = 22.0
offset_right = 283.0
offset_bottom = -139.0
size_flags_horizontal = 0
text = "99'99\"99"
label_settings = SubResource("LabelSettings_ydy4g")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 32.0
offset_top = 51.0
offset_right = 64.0
offset_bottom = 83.0
texture = ExtResource("2_qkp26")
expand_mode = 2

[node name="SfxPause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_53q0m")
volume_db = -2.16

[node name="SfxUnpause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xoioy")
volume_db = -1.157

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect5" type="ColorRect" parent="PauseScreen"]
offset_left = 240.0
offset_top = 224.0
offset_right = 400.0
offset_bottom = 256.0
color = Color(0.0823529, 0.223529, 0.580392, 0.501961)

[node name="P1 Pause" type="Label" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 263.0
offset_top = 208.5
offset_right = 337.0
offset_bottom = 231.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "P1 PAUSE"
vertical_alignment = 1
